# rhvoice-legacy

./: AUTHOR  configure.ac  makefile.am
debian/: README.Debian  README.source  changelog  control  copyright  rules
src/: makefile.am
src/hts_engine_api/lib/: makefile.am
src/lib/: makefile.am  ru_lex.c
